welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:21: error: not found: value setCouleuBrosse
  setCouleuBrosse(c)
  ^